# DB_project

./: .flake8  .gitignore  main.py  pyproject.toml  requirements.txt
src/: db_manager.py  user_interaction.py  utils.py
